build-sys: move swapon from mount/ to sys-utils/
 ... to make it independent on mount stuff.

Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/configure.ac
+++ b/configure.ac
@@ -846,6 +846,12 @@ fi
 AM_CONDITIONAL(BUILD_HWCLOCK, test "x$build_hwclock" = xyes)
 
 
+UL_BUILD_INIT([swapon], [check])
+UL_REQUIRES_LINUX([swapon])
+UL_REQUIRES_BUILD([swapon], [libblkid])
+AM_CONDITIONAL(BUILD_SWAPON, test "x$build_swapon" = xyes)
+
+
 UL_BUILD_INIT([lsblk], [check])
 UL_REQUIRES_LINUX([lsblk])
 UL_REQUIRES_BUILD([lsblk], [libblkid])
