libmount: add --pass-fd to samples/mount
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/libmount/samples/Makefile.am
+++ b/libmount/samples/Makefile.am
@@ -5,6 +5,10 @@ AM_LDFLAGS += $(ul_libmount_la)
 
 noinst_PROGRAMS = mount umount
 
-mount_SOURCES = mount.c $(top_srcdir)/lib/env.c
+mount_SOURCES = mount.c \
+		$(top_srcdir)/lib/env.c \
+		$(top_srcdir)/lib/xgetpass.c \
+		$(top_srcdir)/lib/strutils.c
+
 umount_SOURCES = umount.c $(top_srcdir)/lib/env.c
 
