build-sys: add --enable-new-mount
 Now we have three versions of the mount(8) utility

 * old mount(8)
   --enable-mount [default]

 * old mount(8) linked with libmount
   This is this is necessary for systems without mtab file.
   --enable-libmount-mount

 - new mount(8)
   This is completely new pure-libmount based mount(8).
   --enable-new-mount

Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/sys-utils/.gitignore
+++ b/sys-utils/.gitignore
@@ -19,6 +19,7 @@ lscpu
 mips32.8
 mips64.8
 mips.8
+mount
 mountpoint
 parisc32.8
 parisc64.8
@@ -43,5 +44,6 @@ swapon
 switch_root
 tunelp
 unshare
+umount
 x86_64.8
 chcpu
